# testcopy2

./: .gitignore  CONTRIBUTOR.md  Dockerfile  LICENSE  README.md  USAGE.md  _start_docker_server.sh  _start_metal_server.sh  pyproject.toml  start.sh  start_metal_server.sh  start_server.sh
.github/workflows/: deploy.yaml  deploy_w_docker.yaml
docs/: actions.md  actions_deploy.md  actions_docker_deploy.md  docker.md  dockerfile.md
experiment/: index.html  index.js  main.js  package-lock.json  package.json  pages.js  style.css
experiment-server/: logger.py  requirements.txt  run.py  webserver.py
experiment-server/research_hub/: requirements.txt
experiment-ui/: .eslintrc.cjs  autora-filestore-functions.js  index.html  index.js  main.js  package-lock.json  package.json  pages.js  vite.config.js
experiment-ui/components/: consent.html
experiment-ui/conditions_db/: autora_in.json  autora_meta.json
experiment/components/: consent.html
experiment/research_hub/: requirements.txt
server/: requirements.txt  webserver.py
